Fixed bug of white space in right hand corner

--- a/css/stylesheet.less
+++ b/css/stylesheet.less
@@ -55,6 +55,7 @@ a.page-scroll.white:hover {
 }
 .embedded-1 {
   background-color: @embeddedColor;
+  overflow: auto;
   .embedded
 }
 @media screen and (max-width: 767px) {
@@ -63,7 +64,7 @@ a.page-scroll.white:hover {
   }
   body {
     display: inline-block;
-    padding-top: 40px; 
+    padding-top: 40px;
   }
   .row.content{height: auto;min-height: 100%}
 }
@@ -156,3 +157,8 @@ footer {
     color: white;
   }
 }
+// * {
+//   background: #000 !important;
+//   color: #0f0 !important;
+//   outline: solid #f00 1px !important;
+// }
